force-app/main/default/objects/Customer_Profile__c/Customer_Profile__c.object-meta.xml
<CustomObject>
    <description>This object is used to store data, gathered from Customer Profiles with Lead.</description>
    <label>Customer Profile</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Customer Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>