force-app/main/default/objects/Customer_Profile__c/fields/Approx_Value_of_Person_2_s_Pension_Plan__c.field-meta.xml
<CustomField>
    <fullName>Approx_Value_of_Person_2_s_Pension_Plan__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approx. Value of Person 2&apos;s Pension Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>