force-app/main/default/objects/Customer_Profile__c/fields/Approximate_House_Equity__c.field-meta.xml
<CustomField>
    <fullName>Approximate_House_Equity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approximate House Equity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>