force-app/main/default/objects/Customer_Profile__c/fields/Approximate_Savings_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Savings_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approximate Savings Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>