force-app/main/default/objects/Customer_Profile__c/fields/Approximate_Value_in_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Value_in_Stocks__c</fullName>
    <label>Approximate Value in Stocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>