force-app/main/default/objects/Customer_Profile__c/fields/Average_Child_Age__c.field-meta.xml
<CustomField>
    <fullName>Average_Child_Age__c</fullName>
    <formula>Sum_of_Child_Age__c / Number_of_Children__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Child Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>