force-app/main/default/objects/Customer_Profile__c/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <label>Customer Profile</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>