force-app/main/default/objects/Customer_Profile__c/fields/Deed_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Deed_Distribution__c</fullName>
    <label>Deed Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50/50</fullName>
            </value>
            <value>
                <fullName>Person 1 is owner</fullName>
            </value>
            <value>
                <fullName>Person 2 is owner</fullName>
            </value>
            <value>
                <fullName>Other Distribution (See note)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>