force-app/main/default/objects/Customer_Profile__c/fields/Describe_Person_1_s_Other_Work_Situation__c.field-meta.xml
<CustomField>
    <fullName>Describe_Person_1_s_Other_Work_Situation__c</fullName>
    <label>Describe Person 1&apos;s Other Work Situation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>