force-app/main/default/objects/Customer_Profile__c/fields/Difference_in_Payment_Plan_Value__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_Payment_Plan_Value__c</fullName>
    <formula>Approx_Value_of_Person_1_s_Pension_Plan__c -  Approx_Value_of_Person_2_s_Pension_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference in Payment Plan Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>