force-app/main/default/objects/Customer_Profile__c/fields/Expected_Inheritance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Inheritance_Amount__c</fullName>
    <label>Expected Inheritance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>