force-app/main/default/objects/Customer_Profile__c/fields/Family_Situation__c.field-meta.xml
<CustomField>
    <fullName>Family_Situation__c</fullName>
    <label>Family Situation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single without children</fullName>
            </value>
            <value>
                <fullName>Single with children</fullName>
            </value>
            <value>
                <fullName>Cohabiting without children</fullName>
            </value>
            <value>
                <fullName>Cohabiting with children</fullName>
            </value>
            <value>
                <fullName>Married without children</fullName>
            </value>
            <value>
                <fullName>Married with children</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>