force-app/main/default/objects/Customer_Profile__c/fields/Fortune_Skew_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Skew_Indicator__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This field is set by the agent using a slider. It goes from -100 (Person 1 owns everything) to 100 (Person 2 owns everything). 0 indicates that there is no skew in fortune.</inlineHelpText>
    <label>Fortune Skew Indicator</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>