force-app/main/default/objects/Customer_Profile__c/fields/Has_Children_Over_18__c.field-meta.xml
<CustomField>
    <fullName>Has_Children_Over_18__c</fullName>
    <label>Has Children Over 18</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>