force-app/main/default/objects/Customer_Profile__c/fields/Has_Coownership_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Coownership_Agreement__c</fullName>
    <label>Has Coownership Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>