force-app/main/default/objects/Customer_Profile__c/fields/Has_Large_Pets__c.field-meta.xml
<CustomField>
    <fullName>Has_Large_Pets__c</fullName>
    <inlineHelpText>This could for example be a hippopotamus, a narwhale or another extraordinarily large pet.



Other large pets, such as enourmous dogs, horses, cows or the like, are not counted as large pets, for the purposes of this survey.</inlineHelpText>
    <label>Has Large Pets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>