force-app/main/default/objects/Customer_Profile__c/fields/Has_Pension_Plan__c.field-meta.xml
<CustomField>
    <fullName>Has_Pension_Plan__c</fullName>
    <label>Has Pension Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>