force-app/main/default/objects/Customer_Profile__c/fields/Has_Savings__c.field-meta.xml
<CustomField>
    <fullName>Has_Savings__c</fullName>
    <label>Has Savings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>