force-app/main/default/objects/Customer_Profile__c/fields/Has_Size_Gap_in_Individual_Fortunes__c.field-meta.xml
<CustomField>
    <fullName>Has_Size_Gap_in_Individual_Fortunes__c</fullName>
    <label>Has Size Gap in Individual Fortunes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>