force-app/main/default/objects/Customer_Profile__c/fields/Hesitation_Period_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Hesitation_Period_Narrative__c</fullName>
    <inlineHelpText>This field is a description of how long the customer has waited and why. It is populated by the agent, during the initial consultation.</inlineHelpText>
    <label>Hesitation Period Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>