force-app/main/default/objects/Customer_Profile__c/fields/Is_Free_to_Change_Pension_Plan_Provider__c.field-meta.xml
<CustomField>
    <fullName>Is_Free_to_Change_Pension_Plan_Provider__c</fullName>
    <label>Is Free to Change Pension Plan Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>