force-app/main/default/objects/Customer_Profile__c/fields/Is_Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Employed__c</fullName>
    <label>Is Self Employed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>