force-app/main/default/objects/Customer_Profile__c/fields/Legal_Needs__c.field-meta.xml
<CustomField>
    <fullName>Legal_Needs__c</fullName>
    <label>Legal Needs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Will</fullName>
            </value>
            <value>
                <fullName>Power of attorney</fullName>
            </value>
            <value>
                <fullName>Co-ownership agreement</fullName>
            </value>
            <value>
                <fullName>Child will</fullName>
            </value>
            <value>
                <fullName>Property transfer</fullName>
            </value>
            <value>
                <fullName>Don’t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>