force-app/main/default/objects/Customer_Profile__c/fields/Likelihood_to_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Recommend__c</fullName>
    <label>Likelihood to Recommend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_1_5</valueSetName>
    </valueSet>
</CustomField>