force-app/main/default/objects/Customer_Profile__c/fields/Num_of_Children_Less_than_18_Years_Old__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Children_Less_than_18_Years_Old__c</fullName>
    <label>Num of Children Less than 18 Years Old</label>
    <summaryFilterItems>
        <field>Associated_Person__c.Age__c</field>
        <operation>lessThan</operation>
        <value>18</value>
    </summaryFilterItems>
    <summaryForeignKey>Associated_Person__c.Customer_Profile__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>