force-app/main/default/objects/Customer_Profile__c/fields/Number_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Children__c</fullName>
    <label>Number of Children</label>
    <summaryForeignKey>Associated_Person__c.Customer_Profile__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>