force-app/main/default/objects/Customer_Profile__c/fields/Offer_Clarity__c.field-meta.xml
<CustomField>
    <fullName>Offer_Clarity__c</fullName>
    <label>Offer Clarity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>