force-app/main/default/objects/Customer_Profile__c/fields/Oldest_Child__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Child__c</fullName>
    <label>Oldest Child</label>
    <summarizedField>Associated_Person__c.Age__c</summarizedField>
    <summaryForeignKey>Associated_Person__c.Customer_Profile__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>