force-app/main/default/objects/Customer_Profile__c/fields/Overall_Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience_Rating__c</fullName>
    <label>Overall Experience Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_1_5</valueSetName>
    </valueSet>
</CustomField>