force-app/main/default/objects/Customer_Profile__c/fields/Owns_House__c.field-meta.xml
<CustomField>
    <fullName>Owns_House__c</fullName>
    <label>Owns House</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>