force-app/main/default/objects/Customer_Profile__c/fields/Person_1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_1_Last_Name__c</fullName>
    <label>Person 1 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>