force-app/main/default/objects/Customer_Profile__c/fields/Person_2_Age__c.field-meta.xml
<CustomField>
    <fullName>Person_2_Age__c</fullName>
    <label>Person 2 Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>