force-app/main/default/objects/Customer_Profile__c/fields/Person_2_Work_Situation__c.field-meta.xml
<CustomField>
    <fullName>Person_2_Work_Situation__c</fullName>
    <label>Person 2 Work Situation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular Employee</fullName>
            </value>
            <value>
                <fullName>Public Sector Employee</fullName>
            </value>
            <value>
                <fullName>Part-Time Employee</fullName>
            </value>
            <value>
                <fullName>Retiree</fullName>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>