force-app/main/default/objects/Customer_Profile__c/fields/Preferred_Communication_Platform__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Platform__c</fullName>
    <label>Preferred Communication Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>In-person meeting</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>No contact desired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>