force-app/main/default/objects/Customer_Profile__c/fields/Preferred_contact_method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_contact_method__c</fullName>
    <inlineHelpText>The Customer&apos;s preferred mode for communication</inlineHelpText>
    <label>Preferred contact method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Physical Meeting</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Do Not Want to be Contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>