force-app/main/default/objects/Customer_Profile__c/fields/Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Profile_Type__c</fullName>
    <label>Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>