force-app/main/default/objects/Customer_Profile__c/fields/Reason_for_doing_it_now__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_doing_it_now__c</fullName>
    <label>Reason for doing it now</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>